--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,10 @@
   "devDependencies": {
     "electron": "^27.1.2",
     "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "electron-osx-prompt": "^1.4.1",
+    "electron-prompt": "^1.7.0",
+    "smalltalk": "^4.1.2"
   }
 }
