working toggle and console logs of relevant files

--- a/render/renameMappings.json
+++ b/render/renameMappings.json
@@ -2,13 +2,12 @@
   {
     "targetName": "0. Nomination form to OES",
     "variations": [
+      "Screenshot",
+      "0._Nomination_form_sent_to_OES",
       "0._Nomination_form_to_OES",
       "0._Nomination_Form_sent_to_OES",
       "0._Nomination_to_OES",
-      "capture",
-      "asdasdsa",
-      "testing",
-      "zxcxzc"
+      "capture"
     ]
   },
   {
