--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
